--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,14 +30,14 @@ dependencies {
 
     implementation 'com.github.bumptech.glide:glide:4.9.0'
 
+    implementation 'com.squareup.okhttp3:logging-interceptor:3.9.1'
+
 
     implementation 'com.squareup.retrofit2:retrofit:2.5.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.5.0'
 
 
-
-
-
+    implementation 'com.squareup.picasso:picasso:2.71828'
 
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
